[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hey_utils"
version = "0.0.1"
description = "python wrapper for hey_utils services"
authors = [
    { name = "Euiyoung Hwang", email = "marieuig@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests", # 의존성 패키지
    "opentelemetry-api (>=1.40.0,<2.0.0)",
    "opentelemetry-sdk (>=1.40.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.40.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-http (>=1.40.0,<2.0.0)",
]

[tool.poetry]
# Add the lines below
packages = [
    { include = "*.py", from = "src" },
]
[project.urls]
#"Github" = "<https://github.com/euiyounghwang/python_hey_packages>"
"Github" = "https://github.com/euiyounghwang/python_hey_packages"