[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search_monitoring_tools"
version = "0.0.1"
description = "python wrapper for search_monitoring_tools services"
authors = [
    { name = "Euiyoung Hwang", email = "marieuig@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests", # 의존성 패키지
    "opentelemetry-api (>=1.40.0,<2.0.0)",
    "opentelemetry-sdk (>=1.40.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.40.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-http (>=1.40.0,<2.0.0)",
    "build (>=1.4.2,<2.0.0)",
    "twine (>=6.2.0,<7.0.0)",
]

[tool.poetry]
name = "search_monitoring_tools"
version = "0.0.1"
description = ""
authors = ["Euiyoung <marieuig@gmail.com>>"]
readme = "README.md"
# Add the lines below
packages = [
    { include = "*.py", from = "src" },
]
[project.urls]
#"Github" = "<https://github.com/euiyounghwang/python_hey_packages>"
"Github" = "https://github.com/euiyounghwang/python_hey_packages"
